# last_letter

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  bitbucket-pipelines.yml  contributors.html  doxygen_generate.sh  genindex.html  index.html  objects.inv  package.xml  package.xml~  search.html  searchindex.js  sectionTemplate.html  taskList.todo
_sources/: contributors.txt  (+1 more)
last_letter/: CMakeLists.txt  package.xml
last_letter/cfg/: controller.cfg
last_letter/data/: last_letter.rviz
last_letter/data/parameters/: HCUAV.yaml  HCUAV_aerodynamics.yaml  HCUAV_init.yaml  HCUAV_propulsion.yaml  HID.yaml  aerosonde.yaml  controller.yaml  controller_HCUAV.yaml  custom.yaml  dashboard_HCUAV.yaml  environment.yaml  world.yaml
last_letter/doc/: ArduPlane_SITL.md  ll_installation.md
last_letter/doc/doxygen/: manifest.yaml
last_letter/doc/doxygraph/: graph.dot
last_letter/doc/manual/: ArduPlane_SITL.md  HIDParams.md  RCCal.md  RCSimulator.md  aircraftAeroParams.md  aircraftDashParams.md  aircraftGroundParams.md  aircraftInitParams.md  aircraftPropParams.md  compatibility.md  contributors.md  environmentParams.md  launchingAndParams.md  ll_installation.md  logging.md  parameterFiles.md  referenceFrames.md  rigidBodyParams.md  tutAirplane.md  updating.md  worldParams.md
last_letter/include/: aerodynamicsLib.hpp  controller.hpp  controller_HCUAV.hpp  controller_ll.hpp  coreLib.hpp  dynamicsLib.hpp  engineLib.hpp  environment.hpp  gravityLib.hpp  groundReactionLib.hpp  joy2chan.hpp  kinematicsLib.hpp  model.hpp  modelPlaneLib.hpp  prop_thrust.h  propulsionLib.hpp  uav_model_ros.hpp
last_letter/include/groundReactions/: groundReactionLib.hpp  noGroundReactions.hpp  panosContactPoints.hpp  pointFriction.hpp
last_letter/include/last_letter/: gazebo_model_plugin.hpp  joy2chan.hpp  mavlink_interface.hpp  msgbuffer.hpp  px4_sitl_interface.hpp  uav_model_ros.hpp
last_letter/include/propulsion/: beardEngine.hpp  electricEngine.hpp  noEngine.hpp  pistonEngine.hpp  propulsionLib.hpp
last_letter/launch/: box.launch  bundle.launch  controls.launch  default.launch.py  gazebo.launch  launcher.launch  launcher_ArduHCUAV.launch  launcher_HCUAV.launch  launcher_ll.launch  sim_HCUAV.launch  sim_ll.launch  simulation.launch  simulationCpp.launch  simulation_gazebo.launch  trimmedFlight.launch  visualization.launch  visualization_gazebo.launch
last_letter/launch/Deprecated/: simulation.launch
last_letter/msg/: Accelerations.msg  DOP.msg  Environment.msg  Geoid.msg  RefCommands.msg  SimBarometer.msg  SimGPS.msg  SimPWM.msg  SimSat.msg  SimSats.msg  SimSensor.msg  SimSensor3.msg  SimServos.msg  SimStates.msg
last_letter/scripts/: GPS.py  accelerometer.py  altimeter.py  barometer.py  c_lift_a_server.py  calc_air_data_server.py  clock.py  fdmUDPReceive.py  fdmUDPSend.py  gyroscope.py  magnetometer.py
last_letter/scripts/deprecated/: calc_force_server.py  model.py  quat2euler.py
last_letter/src/: aerodynamicsLib.cpp  argumentHandler.cpp  box_body_drags_node.cpp  box_body_drags_plugin.cpp  box_input_node.cpp  box_joint_plugin.cpp  box_prop_plugin.cpp  box_thruster_driver_plugin.cpp  c_lift_a_server.cpp  clock.cpp  controller.cpp  controller_HCUAV.cpp  controller_ll.cpp  coreLib.cpp  ctrlInjector.cpp  dynamicsLib.cpp  engineLib.cpp  environment.cpp  gazebo_model_plugin.cpp  gazebo_state_test.cpp  gazebo_step.cpp  gravityLib.cpp  groundReactionLib.cpp  joy2chan.cpp  kinematicsLib.cpp  mavlink_interface.cpp  model.cpp  modelPlaneLib.cpp  omega_d_node.cpp  propulsionLib.cpp  px4_sitl_interface.cpp  quat2euler.cpp  sensor_node.cpp  state_publisher.cpp  uav_model_ros.cpp  virtualJoy.cpp
last_letter/src/groundReactions/: groundReactionLib.cpp  noGroundReactions.cpp  panosContactPoints.cpp  pointFriction.cpp
last_letter/src/propulsion/: beardEngine.cpp  electricEngine.cpp  noEngine.cpp  pistonEngine.cpp  propulsionLib.cpp
last_letter/srv/: c_drag_a.srv  gazebo_step.srv
last_letter/srv/deprecated/: c_lift_a.srv  calc_force.srv  calc_torque.srv
last_letter/urdf/: HCUAV.urdf  box.urdf.xacro  skywalker.urdf  skywalker_2013.urdf  wagon.urdf
last_letter/vagrant/: configure_script.sh
last_letter/worlds/: empty.world  ll_empty.world  myworld.world
last_letter_msgs/: CMakeLists.txt  package.xml
last_letter_msgs/msg/: Airdata.msg  Barometer.msg  CommandPayload.msg  ElectricEng.msg  Gnss.msg  Imu.msg  LinkStates.msg  MavlinkHilStateQuaternion.msg  Parameter.msg  SimBarometer.msg  SimCommands.msg  SimGPS.msg  SimPWM.msg  SimSat.msg  SimSensor.msg  SimSensor3.msg  SimStates.msg  SimWrenches.msg  Vector4.msg  inputs.msg
mathutils/: CMakeLists.txt  package.xml  setup.py
mathutils/doc/html/: Heli_model112_mcode.html  Measurement_model205_mcode.html  Measurement_model205_watch.html  Rbn95_mcode.html  Rbn95_watch.html  UnscentedTransformMeasurements238_watch.html  est_function1_mcode.html  est_function1_watch.html  est_function_buildlog1.html  est_function_h.html  est_function_types_h.html  index.html  quat_rotation_custom203_mcode.html  quat_rotation_custom203_watch.html  quat_rotation_custom60_mcode.html  quatmult_custom75_mcode.html  quatmult_custom75_watch.html
mathutils/include/mathutils/: mathutils.hpp  utls.hpp
mathutils/src/: mathutils.cpp  utls.cpp
mathutils/src/mathutils/: __init__.py  mathutils.py
rqt_dashboard/: CMakeLists.txt  UAV_dashboard.perspective  package.xml  plugin.xml  setup.py
rqt_dashboard/msg/: Dashboard.msg
rqt_dashboard/src/: backend.cpp
rqt_dashboard/src/rqt_dashboard/: dashboard.py
uav_utils/: CMakeLists.txt  package.xml  setup.py
uav_utils/doc/html/: Heli_model112_watch.html  SigmaPoints39_mcode.html  SigmaPoints39_watch.html  UnscentedTransformMeasurements238_mcode.html  UnscentedTransformStates152_mcode.html  UnscentedTransformStates152_watch.html  contents_file.tmp  est_function_cpp.html  quat_rotation_custom60_watch.html  quatmult_custom204_mcode.html  quatmult_custom204_watch.html  quatnorm_custom92_mcode.html  quatnorm_custom92_watch.html  rtwtypes_h.html
uav_utils/src/: uav_utils.cpp  utls.cpp
(+608 files in other folders)
