<?xml version="1.0"?>
<package>
  <name>last_letter</name>
  <version>0.5.0</version>
  <description>The last_letter package</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</author>
  <author email="marantos@mail.ntua.gr">Panos Marantos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>uav_utils</build_depend>
  <build_depend>mathutils</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>last_letter_msgs</build_depend>
  <build_depend>rosdoc_lite</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uav_utils</run_depend>
  <run_depend>mathutils</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>last_letter_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
