<?xml version="1.0"?>
<package format="2">
  <name>last_letter</name>
  <version>0.9.0</version>
  <description>The last_letter package</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</author>
  <author email="marantos@mail.ntua.gr">Panos Marantos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>last_letter_msgs</build_depend>
  <build_depend>rosdoc_lite</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>last_letter_lib</build_depend>

  <build_export_depend>last_letter_msgs</build_export_depend>
  <build_export_depend>last_letter_lib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>last_letter_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>last_letter_lib</exec_depend>

</package>
