<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>last_letter</name>
  <version>3.0.0</version>
  <description>The last_letter UAV simulation suite</description>
  <maintainer email="tailwhipx4@gmail.com">George</maintainer>
  <license>TODO: License declaration</license>

  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>mavlink</depend>
  <depend>last_letter_msgs</depend>
  <depend>gazebo11</depend>
  <depend>joy</depend>

  <depend>libblas-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>libfcl-dev</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>gazebo_msgs</buildtool_depend>
  <build_depend>eigen</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
