<?xml version="1.0"?>
<package>
  <name>last_letter_msgs</name>
  <version>0.0.0</version>
  <description>Messages package for the last_letter project</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>