<?xml version="1.0"?>
<package format='2'>
  <name>last_letter_msgs</name>
  <version>0.0.0</version>
  <description>Messages package for the last_letter project</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>