<?xml version="1.0"?>
<package>
  <name>rqt_dashboard</name>
  <version>0.0.0</version>
  <description>Virtual dashboard package for the last_letter simulator</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos Papaliakos</author>
  <author email="fadisamisti@gmail.com">Fadi Samisti</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>last_letter_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>last_letter_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
