<?xml version="1.0"?>
<package format="2">
  <name>rqt_dashboard</name>
  <version>0.1.0</version>
  <description>Virtual dashboard package for the last_letter simulator</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos Papaliakos</author>
  <author email="fadisamisti@gmail.com">Fadi Samisti</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>last_letter_msgs</build_depend>
  <build_depend>last_letter_lib</build_depend>

  <build_export_depend>last_letter_lib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>last_letter_msgs</exec_depend>
  <exec_depend>last_letter_lib</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
