<?xml version="1.0"?>
<package>
  <name>uav_utils</name>
  <version>0.1.0</version>
  <description>Small-scale UAV utilities toolbox</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="marantos@mail.ntua.gr">Panos Marantos</author>
  <author email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mathutils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>last_letter_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>mathutils</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>last_letter_msgs</run_depend>

</package>
